{
    "name": "InputSystem",
    "maps": [
        {
            "name": "UI",
            "id": "5950aad2-8e5b-40c8-ae25-3031a3cf1dab",
            "actions": [
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "d313ad2b-1b4e-430c-bab5-01a64626d32b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftClick",
                    "type": "PassThrough",
                    "id": "e79956ea-6c7b-4157-9f92-6cfacf4138d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b56ab2ca-e896-453f-bb10-077d2304d3dc",
                    "path": "<Touchscreen>/touch*/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchScreen",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4f16616-d4a1-45d4-9f67-e41381c5c8d0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7556cfa0-e96a-42bd-bcec-8e315a1e917a",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchScreen",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a75386fa-cd2f-49ea-8991-91aabfc25301",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InputPlayer",
            "id": "638444b2-dbb4-4686-97f7-13b16e0cbd9d",
            "actions": [
                {
                    "name": "Click",
                    "type": "Value",
                    "id": "a6a0dc80-e7b9-4388-8fd3-1f19832ddfc5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ClickDown",
                    "type": "PassThrough",
                    "id": "a266f93b-5df9-43e3-bd73-253a0cf9d52a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "212769cc-40cb-41e0-a519-00784ea359b4",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e61b4177-3b1e-4a2c-a2a0-801439f23c32",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchScreen",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c2a947e-56d4-4139-9827-6bfffafcf45b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "ClickDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ea63840-e785-4972-aaaa-66a0b04747ca",
                    "path": "<Touchscreen>/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "TouchScreen",
                    "action": "ClickDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "TouchScreen",
            "bindingGroup": "TouchScreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "MouseAndKeyBoard",
            "bindingGroup": "MouseAndKeyBoard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}